--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Always Develop & Parenting"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Twin Appa"
+name                     : "Twin Appa~"
 description              : "TwinAppa Developer Blog."
 url                      : "twinappa.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
